[project]
name = "rc-controls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "picamera2>=0.3.34",
    "psutil>=7.2.2",
    "pymata4>=1.15",
    "quart>=0.20.0",
    "simplejpeg>=1.9.0",
    "websockets>=16.0",
]

[tool.uv]
system-site-packages = true
